Fix: Mobile Spacing

--- a/styles/_main.module.scss
+++ b/styles/_main.module.scss
@@ -83,6 +83,8 @@
 
 .genericFixedOverflow {
   position: fixed;
+  top: 0;
+  left: 0;
   height: 100vh;
   width: 100vw;
   overflow: hidden;
